networking/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - example.com
    secretName: example-com-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        pathRewrite: /
        backend:
          service:
            name: ghost-blog-service
            port:
              name: http
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        pathRewrite: /
        backend:
          service:
            name: ghost-blog-service
            port:
              name: https
